full-moon/tests/cases/fail/parser/index-1/error_display.snap
---
source: full-moon/tests/fail_cases.rs
assertion_line: 56
expression: "String::from_utf8(output.into_inner()).unwrap()"
input_file: full-moon/tests/cases/fail/parser/index-1
---
error[ast]: expected `]` to close index expression
  ┌─ source.lua:1:2
  │
1 │ x[2
  │  ^^

error[ast]: unexpected expression when looking for a statement
  ┌─ source.lua:1:4
  │
1 │ x[2
  │    ^


